# testing-websockets-chat

./: .gitignore  Dockerfile  Makefile  README.md  setup.cfg  setup.py  static  templates
src/testing_websockets_chat/: __init__.py  cli.py  server.py
src/testing_websockets_chat/static/css/: app.css
src/testing_websockets_chat/templates/: chat.html  index.html  login.html  orig.html
