[metadata]
name=testing-websockets-chat
version=1.0.0
url=https://github.com/eitchugo/testing-websockets-chat
author=Hugo Cisneiros (Eitch)
author_email=eitch@naovouler.com.br
description=Testing websockets chat
long_description=file:README.md
long_description_content_type=text/markdown
license_files = LICENSE
classifiers=
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe=true
install_requirements=
        flask==3.0.3
        Flask-SocketIO==5.3.6
        eventlet==0.36.1

[pycodestyle]
max-line-length = 120

[flake8]
max-line-length = 120
